--- a/work.html
+++ b/work.html
@@ -50,7 +50,7 @@
           <img src="img/projects/project3.jpg" alt="Project" />
         </a>
         <a href="#" class="btn-light"> <i class="fas fa-eye"></i> Real Time Chat Application </a>
-        <a href="https://github.com/ovayoub/real-time-chat-app" class="btn-dark">
+        <a href="https://github.com/ovayoub/real-time-chat-app" target="_blank" class="btn-dark">
           <i class="fas fa-external-link-alt"></i> Github
         </a>
       </div>
@@ -59,7 +59,8 @@
           <img src="img/projects/project1.gif" alt="Project" />
         </a>
         <a href="#" class="btn-light"> <i class="fas fa-eye"></i> Lung Cancer Prediction </a>
-        <a href="https://github.com/ovayoub/Lung-Cancer-Prediction" class="btn-dark">
+        
+        <a href="https://github.com/ovayoub/Lung-Cancer-Prediction" target="_blank" class="btn-dark">
           <i class="fas fa-external-link-alt"></i> Github
         </a>
       </div>
@@ -80,7 +81,7 @@
           <img src="img/projects/project4.png" alt="Project" />
         </a>
         <a href="#" class="btn-light"> <i class="fas fa-eye"></i> Onalso Motivation </a>
-        <a  href="http://www.onalso.com" target="_blank" class="btn-dark">
+        <a  href="http://www.v2lux.com" target="_blank" class="btn-dark">
 
           <i class="fas fa-globe"></i> Visite the Web site
         </a>
@@ -98,9 +99,9 @@
           <img src="img/projects/project5.jpg" alt="Project" />
         </a>
         <a href="#" class="btn-light"> <i class="fas fa-eye"></i> Online Store </a>
-        <a href="#" class="btn-dark">
+        <a  href="http://www.v2lux.com" target="_blank" class="btn-dark">
 
-          <i class="fas fa-globe" href="www.v2lux.com"></i> Visite the Web site
+          <i class="fas fa-globe"></i> Visite the Web site
         </a>
       </div>
 
