--- a/contact.html
+++ b/contact.html
@@ -1,60 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-      crossorigin="anonymous"
-    />
 
-    <link rel="stylesheet" href="css/main.css" />
-    <title>Contact Me</title>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+    integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous" />
 
-  <body>
-    <header>
-      <div class="menu-btn">
-        <div class="btn-line"></div>
-        <div class="btn-line"></div>
-        <div class="btn-line"></div>
+  <link rel="stylesheet" href="css/main.css" />
+  <title>Contact Me</title>
+</head>
+
+<body>
+  <header>
+    <div class="menu-btn">
+      <div class="btn-line"></div>
+      <div class="btn-line"></div>
+      <div class="btn-line"></div>
+    </div>
+
+    <nav class="menu">
+      <div class="menu-branding">
+        <div class="portrait"></div>
       </div>
+      <ul class="menu-nav">
+        <li class="nav-item">
+          <a href="index.html" class="nav-link"> Home </a>
+        </li>
+        <li class="nav-item">
+          <a href="about.html" class="nav-link"> About Me </a>
+        </li>
+        <li class="nav-item">
+          <a href="work.html" class="nav-link"> My Work </a>
+        </li>
+        <li class="nav-item current">
+          <a href="contact.html" class="nav-link"> Contact Me </a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-      <nav class="menu">
-        <div class="menu-branding"><div class="portrait"></div></div>
-        <ul class="menu-nav">
-          <li class="nav-item">
-            <a href="index.html" class="nav-link"> Home </a>
-          </li>
-          <li class="nav-item">
-            <a href="about.html" class="nav-link"> About Me </a>
-          </li>
-          <li class="nav-item">
-            <a href="work.html" class="nav-link"> My Work </a>
-          </li>
-          <li class="nav-item current">
-            <a href="contact.html" class="nav-link"> Contact Me </a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+  <main id="contact">
+    <h1 class="lg-heading">Contact <span class="text-secondary">Me</span></h1>
+    <h2 class="sm-heading">This is how you can reach me...</h2>
+    <div class="boxes">
 
-    <main id="contact">
-      <h1 class="lg-heading">Contact <span class="text-secondary">Me</span></h1>
-      <h2 class="sm-heading">This is how you can reach me...</h2>
-      <div class="boxes">
-        <div><span class="text-secondary">Email: </span>ovayoub@gmail.com</div>
-        <div><span class="text-secondary">Phone: </span> (+212) 66066 4763</div>
-        <div><span class="text-secondary">Address 1: </span> Rmel, AGADIR </div>
-        <div><span class="text-secondary">Address 2: </span> Sidi Maârouf, Casablanca </div>
-      </div>
-    </main>
+      <div>
 
-    <footer id="main-footer">Copyright &copy; 2019</footer>
+        <span class="text-secondary">Email: </span><a href="mailto:ovayoub@gmail.com?Subject=Portfolio"
+          target="_top">ovayoub@gmail.com</a></div>
+      <div><span class="text-secondary">Phone: </span> (+212) 66066 4763</div>
+      <div><span class="text-secondary">Address 1: </span> Rmel, AGADIR </div>
+      <div><span class="text-secondary">Address 2: </span> Sidi Maârouf, Casablanca </div>
+    </div>
+  </main>
 
-    <script src="js/main.js"></script>
-  </body>
+  <footer id="main-footer">Copyright &copy; 2019</footer>
+
+  <script src="js/main.js"></script>
+</body>
+
 </html>
