add activities tab

--- a/work.html
+++ b/work.html
@@ -28,11 +28,14 @@
         <li class="nav-item">
           <a href="index.html" class="nav-link"> Home </a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item current">
           <a href="about.html" class="nav-link"> About Me </a>
         </li>
-        <li class="nav-item current">
+        <li class="nav-item">
           <a href="work.html" class="nav-link"> My Work </a>
+        </li>
+        <li class="nav-item">
+          <a href="activity.html" class="nav-link"> My activities </a>
         </li>
         <li class="nav-item">
           <a href="contact.html" class="nav-link"> Contact Me </a>
@@ -101,7 +104,17 @@
         <a href="#" class="btn-light"> <i class="fas fa-eye"></i> Online Store </a>
         <a  href="http://www.v2lux.com" target="_blank" class="btn-dark">
 
-          <i class="fas fa-globe"></i> Visite the Web site
+          <i class="fas fa-globe"></i> luxurious items cheap
+        </a>
+      </div>
+      <div class="item">
+        <a href="#!">
+          <img src="img/projects/project6.jpg" alt="Project" />
+        </a>
+        <a href="#" class="btn-light"> <i class="fas fa-eye"></i> EveryQoute </a>
+        <a  href="http://www.EveryQoute.com"  class="btn-dark">
+
+          <i class="fas fa-globe"></i> Every quote in Internet
         </a>
       </div>
 
