--- a/contact.html
+++ b/contact.html
@@ -28,13 +28,16 @@
         <li class="nav-item">
           <a href="index.html" class="nav-link"> Home </a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item current">
           <a href="about.html" class="nav-link"> About Me </a>
         </li>
         <li class="nav-item">
           <a href="work.html" class="nav-link"> My Work </a>
         </li>
-        <li class="nav-item current">
+        <li class="nav-item">
+          <a href="activity.html" class="nav-link"> My activities </a>
+        </li>
+        <li class="nav-item">
           <a href="contact.html" class="nav-link"> Contact Me </a>
         </li>
       </ul>
