--- a/index.html
+++ b/index.html
@@ -22,18 +22,23 @@
         <div class="btn-line"></div>
         <div class="btn-line"></div>
       </div>
-
+  
       <nav class="menu">
-        <div class="menu-branding"><div class="portrait"></div></div>
+        <div class="menu-branding">
+          <div class="portrait"></div>
+        </div>
         <ul class="menu-nav">
-          <li class="nav-item current">
+          <li class="nav-item">
             <a href="index.html" class="nav-link"> Home </a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item current">
             <a href="about.html" class="nav-link"> About Me </a>
           </li>
           <li class="nav-item">
             <a href="work.html" class="nav-link"> My Work </a>
+          </li>
+          <li class="nav-item">
+            <a href="activity.html" class="nav-link"> My activities </a>
           </li>
           <li class="nav-item">
             <a href="contact.html" class="nav-link"> Contact Me </a>
