--- a/work.html
+++ b/work.html
@@ -52,7 +52,7 @@
         <a href="#!">
           <img src="img/projects/project3.jpg" alt="Project" />
         </a>
-        <a href="#" class="btn-light"> <i class="fas fa-eye"></i> Real Time Chat Application </a>
+        <a href="#" class="btn-light">Real Time Chat Application </a>
         <a href="https://github.com/ovayoub/real-time-chat-app" target="_blank" class="btn-dark">
           <i class="fas fa-external-link-alt"></i> Github
         </a>
@@ -61,7 +61,7 @@
         <a href="#!">
           <img src="img/projects/project1.gif" alt="Project" />
         </a>
-        <a href="#" class="btn-light"> <i class="fas fa-eye"></i> Lung Cancer Prediction </a>
+        <a href="#" class="btn-light">Lung Cancer Prediction </a>
         
         <a href="https://github.com/ovayoub/Lung-Cancer-Prediction" target="_blank" class="btn-dark">
           <i class="fas fa-external-link-alt"></i> Github
@@ -72,7 +72,7 @@
         <a href="#!">
           <img src="img/projects/project2.gif" alt="Project" />
         </a>
-        <a href="#" class="btn-light"> <i class="fas fa-eye"></i> Onbab Techy News </a>
+        <a href="#" class="btn-light">Onbab Techy News </a>
         <a  href="http://www.onbab.com" target="_blank" class="btn-dark">
 
           <i class="fas fa-globe"></i> Visite the Web site
@@ -83,7 +83,7 @@
         <a href="#!">
           <img src="img/projects/project4.png" alt="Project" />
         </a>
-        <a href="#" class="btn-light"> <i class="fas fa-eye"></i> Onalso Motivation </a>
+        <a href="#" class="btn-light">Onalso Motivation </a>
         <a  href="http://www.v2lux.com" target="_blank" class="btn-dark">
 
           <i class="fas fa-globe"></i> Visite the Web site
@@ -101,7 +101,7 @@
         <a href="#!">
           <img src="img/projects/project5.jpg" alt="Project" />
         </a>
-        <a href="#" class="btn-light"> <i class="fas fa-eye"></i> Online Store </a>
+        <a href="#" class="btn-light">Online Store </a>
         <a  href="http://www.v2lux.com" target="_blank" class="btn-dark">
 
           <i class="fas fa-globe"></i> luxurious items cheap
@@ -111,7 +111,7 @@
         <a href="#!">
           <img src="img/projects/project6.jpg" alt="Project" />
         </a>
-        <a href="#" class="btn-light"> <i class="fas fa-eye"></i> EveryQoute </a>
+        <a href="#" class="btn-light">EveryQoute </a>
         <a  href="http://www.EveryQoute.com"  class="btn-dark">
 
           <i class="fas fa-globe"></i> Every quote in Internet
