hovering for infos

--- a/work.html
+++ b/work.html
@@ -14,6 +14,117 @@
 
 <body>
   <header>
+    <!--
+
+      <div class="menu-btn">
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+      </div>
+  
+      <nav class="menu">
+        <div class="menu-branding">
+          <div class="portrait"></div>
+        </div>
+        <ul class="menu-nav">
+          <li class="nav-item">
+            <a href="index.html" class="nav-link"> Home </a>
+          </li>
+          <li class="nav-item current">
+            <a href="about.html" class="nav-link"> About Me </a>
+          </li>
+          <li class="nav-item">
+            <a href="work.html" class="nav-link"> My Work </a>
+          </li>
+          <li class="nav-item">
+            <a href="activity.html" class="nav-link"> My activities </a>
+          </li>
+          <li class="nav-item">
+            <a href="contact.html" class="nav-link"> Contact Me </a>
+          </li>
+        </ul>
+      </nav>
+    -->
+  </header>
+
+  <main id="work">
+    <h1 class="lg-heading">My <span class="text-secondary">Work</span></h1>
+    <h2 class="sm-heading">Check out some of my projects...</h2>
+    <div class="projects">
+      <div class="item">
+        <a href="#!">
+          <img src="img/projects/project3.jpg" alt="Project" />
+        </a>
+        <a href="#" class="btn-light">Real Time Chat Application </a>
+        <a href="https://github.com/ovayoub/real-time-chat-app" target="_blank" class="btn-dark">
+          <i class="fas fa-external-link-alt"></i> Github
+        </a>
+      </div>
+      <div class="item">
+        <a href="#!">
+          <img src="img/projects/project1.gif" alt="Project" />
+        </a>
+        <a href="#" class="btn-light">Lung Cancer Prediction </a>
+
+        <a href="https://github.com/ovayoub/Lung-Cancer-Prediction" target="_blank" class="btn-dark">
+          <i class="fas fa-external-link-alt"></i> Github
+        </a>
+      </div>
+
+      <div class="item">
+        <a href="#!">
+          <img src="img/projects/project2.gif" alt="Project" />
+        </a>
+        <a href="#" class="btn-light">Onbab Techy News </a>
+        <a href="http://www.onbab.com" target="_blank" class="btn-dark">
+
+          <i class="fas fa-globe"></i> Visite the Web site
+        </a>
+      </div>
+
+      <div class="item">
+        <a href="#!">
+          <img src="img/projects/project4.png" alt="Project" />
+        </a>
+        <a href="#" class="btn-light">Onalso Motivation </a>
+        <a href="http://www.v2lux.com" target="_blank" class="btn-dark">
+
+          <i class="fas fa-globe"></i> Visite the Web site
+        </a>
+      </div>
+
+
+
+    </div>
+    <br>
+
+    <h2 class="sm-heading">My upcoming projects...</h2>
+    <div class="projects">
+      <div class="item">
+        <a href="#!">
+          <img src="img/projects/project5.jpg" alt="Project" />
+        </a>
+        <a href="#" class="btn-light">Online Store </a>
+        <a href="http://www.v2lux.com" target="_blank" class="btn-dark">
+
+          <i class="fas fa-globe"></i> luxurious items cheap
+        </a>
+      </div>
+      <div class="item">
+        <a href="#!">
+          <img src="img/projects/project6.jpg" alt="Project" />
+        </a>
+        <a href="#" class="btn-light">EveryQoute </a>
+        <a href="http://www.EveryQoute.com" class="btn-dark">
+
+          <i class="fas fa-globe"></i> Every quote in Internet
+        </a>
+      </div>
+
+
+    </div>
+  </main>
+  <div class="menu-container">
     <div class="menu-btn">
       <div class="btn-line"></div>
       <div class="btn-line"></div>
@@ -21,6 +132,7 @@
     </div>
 
     <nav class="menu">
+
       <div class="menu-branding">
         <div class="portrait"></div>
       </div>
@@ -42,86 +154,7 @@
         </li>
       </ul>
     </nav>
-  </header>
-
-  <main id="work">
-    <h1 class="lg-heading">My <span class="text-secondary">Work</span></h1>
-    <h2 class="sm-heading">Check out some of my projects...</h2>
-    <div class="projects">
-      <div class="item">
-        <a href="#!">
-          <img src="img/projects/project3.jpg" alt="Project" />
-        </a>
-        <a href="#" class="btn-light">Real Time Chat Application </a>
-        <a href="https://github.com/ovayoub/real-time-chat-app" target="_blank" class="btn-dark">
-          <i class="fas fa-external-link-alt"></i> Github
-        </a>
-      </div>
-      <div class="item">
-        <a href="#!">
-          <img src="img/projects/project1.gif" alt="Project" />
-        </a>
-        <a href="#" class="btn-light">Lung Cancer Prediction </a>
-        
-        <a href="https://github.com/ovayoub/Lung-Cancer-Prediction" target="_blank" class="btn-dark">
-          <i class="fas fa-external-link-alt"></i> Github
-        </a>
-      </div>
-
-      <div class="item">
-        <a href="#!">
-          <img src="img/projects/project2.gif" alt="Project" />
-        </a>
-        <a href="#" class="btn-light">Onbab Techy News </a>
-        <a  href="http://www.onbab.com" target="_blank" class="btn-dark">
-
-          <i class="fas fa-globe"></i> Visite the Web site
-        </a>
-      </div>
-
-      <div class="item">
-        <a href="#!">
-          <img src="img/projects/project4.png" alt="Project" />
-        </a>
-        <a href="#" class="btn-light">Onalso Motivation </a>
-        <a  href="http://www.v2lux.com" target="_blank" class="btn-dark">
-
-          <i class="fas fa-globe"></i> Visite the Web site
-        </a>
-      </div>
-
-     
-
-    </div>
-    <br>
-
-    <h2 class="sm-heading">My upcoming projects...</h2>
-    <div class="projects">
-      <div class="item">
-        <a href="#!">
-          <img src="img/projects/project5.jpg" alt="Project" />
-        </a>
-        <a href="#" class="btn-light">Online Store </a>
-        <a  href="http://www.v2lux.com" target="_blank" class="btn-dark">
-
-          <i class="fas fa-globe"></i> luxurious items cheap
-        </a>
-      </div>
-      <div class="item">
-        <a href="#!">
-          <img src="img/projects/project6.jpg" alt="Project" />
-        </a>
-        <a href="#" class="btn-light">EveryQoute </a>
-        <a  href="http://www.EveryQoute.com"  class="btn-dark">
-
-          <i class="fas fa-globe"></i> Every quote in Internet
-        </a>
-      </div>
-
-
-    </div>
-  </main>
-
+  </div>
   <footer id="main-footer">Copyright &copy; 2019</footer>
 
   <script src="js/main.js"></script>
