--- a/contact.html
+++ b/contact.html
@@ -54,8 +54,8 @@
         <span class="text-secondary">Email: </span><a href="mailto:ovayoub@gmail.com?Subject=Portfolio"
           target="_top">ovayoub@gmail.com</a></div>
       <div><span class="text-secondary">Phone: </span> (+212) 66066 4763</div>
-      <div><span class="text-secondary">Address 1: </span> Rmel, AGADIR </div>
-      <div><span class="text-secondary">Address 2: </span> Sidi Maârouf, Casablanca </div>
+      <div><span class="text-secondary">Address 1: </span> Sidi Maârouf, Casablanca, Morocco </div>
+      <div><span class="text-secondary">Address 2: </span> Rmel, AGADIR, Morocco  </div>
     </div>
   </main>
 
