--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       Ayoub <span class="text-secondary">EZ-ZARIY</span>
     </h1>
     <h2 class="sm-heading">
-      Web & Desktop Developer, Seeking full stack...
+      Web Developer, Seeking full stack...
     </h2>
     <div class="icons">
       <a href="https://twitter.com/Ayoubnesss?lang=en" target="_blank">
@@ -40,7 +40,7 @@
       <a href="https://www.linkedin.com/in/ayoub-ez-zariy-bb93bb11b/" target="_blank">
         <i class="fab fa-linkedin fa-2x"></i>
       </a>
-      <a href="https://github.com/ovayoub" target="_blank">
+      <a href="https://github.com/Ayoubness/" target="_blank">
         <i class="fab fa-github fa-2x"></i>
       </a>
     </div>
