--- a/work.html
+++ b/work.html
@@ -49,7 +49,7 @@
 
   <main id="work">
     <h1 class="lg-heading">My <span class="text-secondary">Work</span></h1>
-    <h2 class="sm-heading">Check out some of my projects...</h2>
+    <h2 class="sm-heading">Check out some of my work...</h2>
     <div class="projects">
       <div class="item">
         <a href="#!">
@@ -64,7 +64,7 @@
         <a href="#!">
           <img src="img/projects/project1.gif" alt="Project" />
         </a>
-        <a href="#" class="btn-light">Lung Cancer Prediction </a>
+        <a href="#" class="btn-light">Lung Cancer Prediction using AI</a>
 
         <a href="https://github.com/ovayoub/Lung-Cancer-Prediction" target="_blank" class="btn-dark">
           <i class="fas fa-external-link-alt"></i> Github
@@ -75,7 +75,7 @@
         <a href="#!">
           <img src="img/projects/project2.gif" alt="Project" />
         </a>
-        <a href="#" class="btn-light">Onbab Techy News </a>
+        <a href="#" class="btn-light">Onbab "my tech blog" </a>
         <a href="http://www.onbab.com" target="_blank" class="btn-dark">
 
           <i class="fas fa-globe"></i> Visite the Web site
